--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hello World</title>
+  <title>Under construction</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="canonical" href="https://chrissy-barrett.github.io/pwa/" />
   <link rel="manifest" href="/pwa/manifest.json">
