--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link rel="canonical" href="https://chrissy-barrett.github.io/pwa/" />
   <link rel="manifest" href="/pwa/manifest.json">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="images/hello-icon-152.png">
+  <link rel="apple-touch-icon" href="images/CB-152.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="white">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Hello World">
-  <meta name="msapplication-TileImage" content="images/hello-icon-144.png">
+  <meta name="apple-mobile-web-app-title" content="CB">
+  <meta name="msapplication-TileImage" content="images/CB-144.png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
 
